# stl-scraper

./: .env.dist  .gitignore  app.py  httpserver.py  pyproject.toml  requirements.txt  stl.py
static/: index.html  stlscraper-1.0-py3-none-any.whl
static/scripts/: main.js  py-worker.js  webworker.js
static/styles/: main.css
stl/: main.py
stl/command/: stl_command.py
stl/endpoint/: base_endpoint.py  calendar.py  pdp.py
stl/persistence/: csv.py  json.py  test_json.py
stl/scraper/: airbnb_scraper.py
stl/viz/: app.py  app_layout.py  charts.py  data.py  ip.ipynb  viz.ipynb
