[build-system]
requires = ["setuptools>=61.0","wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "stlscraper"
version = "1.0"
description = "stlscraper"
requires-python = ">=3.9"
dependencies = [
    "urllib3==1.26.18",
    "elasticsearch==8.4.3",
    "geopy==2.3.0",
    "lxml==4.9.3",
    "pycountry==23.12.11",
    "python-dotenv==1.0.0",
    "requests==2.28.2",
    "docopt==0.6.2",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools]
packages = [
    "stl",
    "stl.command",
    "stl.endpoint",
    "stl.exception",
    "stl.geo",
    "stl.persistence",
    "stl.scraper",
]